# HimiiEngine

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  CMakePresets.json  CMakePresets.json.example  README.md  build.py  imgui.ini  index.html  vcpkg.json
.cursor/hooks/: session-start.py
.trellis/: .template-hashes.json  config.yaml
.trellis/spec/: agent-workflow.md  index.md  product-ux.md
.understand-anything/: .understandignore
.understand-anything/tmp/: batch-input-1.json  batch-input-10.json  batch-input-11.json  batch-input-12.json  batch-input-13-fixed.json  batch-input-13.json  batch-input-14.json  batch-input-2.json  batch-input-3.json  batch-input-4.json  batch-input-5.json  batch-input-6.json  batch-input-7.json  batch-input-8.json  batch-input-9.json  build-batch2-graph.cjs  gen-batch3.js  generate-batch-10.mjs  split-batch2.cjs  ua-batch2-all-graph.json  ua-file-analyzer-input-1.json  ua-file-analyzer-input-10.json  ua-file-analyzer-input-11.json  ua-file-analyzer-input-12.json  ua-file-analyzer-input-14.json  ua-file-analyzer-input-2.json  ua-file-analyzer-input-3.json  ua-file-analyzer-input-4.json  ua-file-analyzer-input-5.json  ua-file-analyzer-input-6.json  ua-file-analyzer-input-7.json  ua-file-analyzer-input-9.json  ua-file-extract-results-1.json  (+16 more)
AgentConstraints/: index.html
DevManual/: index.html
Docs/: mkdocs.yml
Docs/docs/: Roadmap.md  (+2 more)
Engine/: CMakeLists.txt
Engine/src/: Engine.h
Engine/src/Himii/Asset/: Asset.h  AssetManager.cpp  AssetManager.h  AssetSerializer.cpp  PackFile.cpp  PackFile.h  PackFileFormat.h  Sprite.h  SpriteSheetUtility.cpp  SpriteSheetUtility.h  TextureImportSerializer.cpp  TextureImportSerializer.h
Engine/src/Himii/Audio/: AudioEngine.cpp  AudioEngine.h  SoundAsset.cpp  SoundAsset.h  SoundPlayerUtility.cpp  SoundPlayerUtility.h
Engine/src/Himii/Core/: Application.cpp  Application.h  ConsoleLog.cpp  ConsoleLog.h  EntryPoint.h  FileSystem.cpp  FileSystem.h  FileWatcher.cpp  FileWatcher.h  Input.h  JobSystem.cpp  JobSystem.h  Log.cpp  Log.h  Window.h
Engine/src/Himii/Editor/: EditorSettings.cpp  EditorSettings.h
Engine/src/Himii/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Engine/src/Himii/Particle/: ParticleSystem.cpp  ParticleSystem.h
Engine/src/Himii/Project/: Project.cpp  Project.h  ProjectSerializer.cpp
Engine/src/Himii/Renderer/: EditorCamera.cpp  EditorCamera.h  Font.cpp  Font.h  FontRegressionTests.cpp  FontRegressionTests.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Shader.h  TextLayout.cpp  TextLayout.h  Texture.cpp  Texture.h
Engine/src/Himii/Scene/: Components.h  Entity.h  Physics2DLayerSettings.h  PrefabSerializer.cpp  PrefabSerializer.h  Scene.cpp  Scene.h  SceneSerializer.cpp  SortingLayerSettings.h  SpriteAnimation.h  SpriteAnimationUtility.cpp  SpriteAnimationUtility.h  SpriteRendererComponent.cpp  SpriteRendererUtility.cpp  SpriteRendererUtility.h  TileMapChunk.h  TileMapCoordinateUtility.cpp  TileMapCoordinateUtility.h  TileMapData.cpp  TileMapData.h  TileSet.h  TilemapColliderBuilder.cpp  TilemapColliderBuilder.h
Engine/src/Himii/Scripting/: ScriptCompiler.cpp  ScriptCompiler.h  ScriptEngine.cpp  ScriptEngine.h  ScriptGlue.cpp  ScriptGlue.h  ScriptIDE.cpp  ScriptIDE.h  ScriptIDELauncher.cpp  ScriptIDELauncher.h
Engine/src/Platform/OpenGL/: OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLTextureCube.cpp  OpenGLTextureCube.h
Engine/src/Platform/Windows/: WindowsInput.cpp  WindowsWindow.cpp  WindowsWindow.h
HimiiEditor/: CMakeLists.txt
HimiiEditor/assets/shaders/: Grid.glsl  Renderer2D_Text.glsl
HimiiEditor/src/: EditorExternalFileDrop.cpp  EditorExternalFileDrop.h  EditorLayer.cpp  EditorLayer.h  EditorLayoutDefaults.cpp  EditorLayoutDefaults.h  EditorStartupIcon.cpp  EditorStartupIcon.h  HimiiApp.cpp  InspectorControls.cpp  InspectorControls.h  TilemapEditorUtility.cpp  TilemapEditorUtility.h
HimiiEditor/src/commands/: EditorCommandHistory.cpp  EditorCommandHistory.h  EditorCommands.cpp  EditorCommands.h  EntitySnapshot.cpp  EntitySnapshot.h  IEditorCommand.h
HimiiEditor/src/panel/: AnimationEditorPanel.cpp  AnimationEditorPanel.h  AnimationPanel.cpp  AnimationPanel.h  ConsolePanel.cpp  ConsolePanel.h  ContentBrowserPanel.cpp  ContentBrowserPanel.h  EditorPreferencesPanel.cpp  EditorPreferencesPanel.h  FontDiagnosticsPanel.cpp  FontDiagnosticsPanel.h  ParticleEmitterEditorPanel.cpp  ParticleEmitterEditorPanel.h  ProjectSettingsPanel.cpp  ProjectSettingsPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  ScriptConsolePanel.cpp  ScriptConsolePanel.h  TextureInspectorPanel.cpp  TextureInspectorPanel.h  TileMapEditorPanel.cpp  TileMapEditorPanel.h
HimiiEditor/src/panel/ComponentInspector/: ComponentInspectorDrawContext.h  ComponentInspectorHeader.cpp  ComponentInspectorHeader.h  ComponentInspectorRegistry.cpp  ComponentInspectorRegistry.h  ComponentInspectorUtils.cpp  ComponentInspectorUtils.h
HimiiEditor/src/panel/ComponentInspector/drawers/: BoxCollider2DComponentInspectorDrawer.cpp  CameraComponentInspectorDrawer.cpp  CanvasComponentInspectorDrawer.cpp  CircleCollider2DComponentInspectorDrawer.cpp  CircleRendererComponentInspectorDrawer.cpp  MeshComponentInspectorDrawer.cpp  ParticleEmitterComponentInspectorDrawer.cpp  Rigidbody2DComponentInspectorDrawer.cpp  ScriptComponentInspectorDrawer.cpp  SoundPlayerComponentInspectorDrawer.cpp  SpriteAnimationComponentInspectorDrawer.cpp  SpriteRendererComponentInspectorDrawer.cpp  TilemapCollider2DComponentInspectorDrawer.cpp  TilemapComponentInspectorDrawer.cpp  TransformComponentInspectorDrawer.cpp  UIButtonComponentInspectorDrawer.cpp  UIImageComponentInspectorDrawer.cpp  UITextComponentInspectorDrawer.cpp  UITransformComponentInspectorDrawer.cpp
HimiiRuntime/: CMakeLists.txt
HimiiRuntime/assets/scripts/: Player.cs
HimiiRuntime/src/: RuntimeApp.cpp
Roadmap/: index.html
ScriptCore/: ScriptCore.csproj
Tools/ResourcePacker/: CMakeLists.txt  main.cpp
UserManual/: index.html
cmake/: EditorPostBuild.cmake  RuntimePostBuild.cmake
search/: search_index.json
stylesheets/: extra.css
(+59 files in other folders)
